# prime-search

./: .gitignore  CMakeLists.txt  README.md  clean.sh  ncu_scripts.sh  permutes_testing.py  profile_general.sh  rebuild.sh  simulations.py  visualization.py
src/: main.cu
src/kernels/: basic_kernel.cu  basic_kernel.cuh  bogo_sort.cu  bogo_sort.cuh  bogo_sort_matv1.cu  bogo_sort_matv1.cuh  prime_search.cu  prime_search.cuh  prune.cu  prune.cuh
tests/: kernel_tests.cu
